--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-debounce-input": "^3.2.0",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
